# StarRotator

./: .gitignore  LICENSE  README.md  StarRotator.py  demo_observations.txt  demo_planet.txt  demo_star.txt  environment.yml  main.py  pyproject.toml  requirements.txt  travis.yml
.github/workflows/: ci.yml
docs/: conf.py  conf_backup.py
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
example/doppler_shadow_fit/: example_ds.ipynb
example/doppler_shadow_fit/ExampleData/: example_data.npy  example_data_err.npy  orbital_phases.npy
input/: demo_planet.txt  demo_star.txt
lib/: fitting.py  integrate.py  operations.py  planet_pos.py  plotting.py  stellar_spectrum.py  test.py  vgrid.py
lib/SPECTRUM/: 67244k2p00.mod  6750p05g4.mod  Makefile  Makefile~  abundance  abundance.c  autoion2.c  avsini  avsini.c  bflxsm2  bflxsm2.c  bflxsmR.c  blackwel  blackwel.c  blackwell_sh.tcl  broad10.c  broad11.c  bsmooth2  bsmooth2.c  bwline2.c  c1op3.c  c1op_av_k.c  customsm  customsm.c  cutoff.c  density7.c  density8.c  feI.eqw  fspec.c  gauss.c  gausssm.c  gfadjust  gfadjust.c  hminffop.c  hminop.c  inline7.c  inmodel5.c  inmodel6.c  instrong.c  isotope.iso  (+35 more)
starrotator/: StarRotator.py  __init__.py  core.py
starrotator/data/: demo_input.json  demo_observations.txt  demo_star.txt  demo_system.txt
starrotator/lib/: constants.py  dynamics.py  integrate.py  integrate_depr.py  operations.py  planet_pos.py  plotting.py  stellar_spectrum.py  test.py  util.py  vgrid.py
tests/: test_basic.py
(+4 files in other folders)
